--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
+        "sort-imports": "error",
         "@angular-eslint/directive-selector": [
           "error",
           {
